[package]
name = "rdup"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"
env_logger = "0.8"
uuid = { version = "1", features = ["v4", "serde"] }
rand = "0.8"
tracing = "0.1"
tracing-subscriber = "0.3.19"
thiserror = "1.0"
futures-util = "0.3.31"
tokio-tungstenite = "0.24.0"
url = "2.5.4"
anyhow = "1"
console-subscriber = "0.4.1"
